--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 cloud:
   aws:
     credentials:
-      access-key: AKIAXFMNXM4FDX55SJ5F
-      secret-key: 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
+      access-key: ""
+      secret-key: ""
     region:
       static: us-west-1
     stack:
